--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -300,10 +300,12 @@ hr.summary-line.yellow{
 
 #modal-res-posting.modal-result-posting{
     max-height: 306px;
+    max-width: 500px;
     /* width: 100%;
     max-height: 200px !important;
     overflow: auto; */
 }
+
 
 /* end */
 
