--- a/public/css/app.css
+++ b/public/css/app.css
@@ -142,10 +142,55 @@
 /* end */
 
 /* NAV PROFILE */
+.dropdown-content.profile a:hover{
+    background-color: transparent;
+}
+
+
 .profile-details{
     line-height: 23.6px;
 }
+
+.profile-option-links{
+    border-top: 1px solid rgba(255,255,255,0.2);
+}
+
+#nav-modal-options .modal-footer{
+    line-height: 1.5;
+}
+#nav-modal-options .input-field{
+    line-height: 1.5;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+#nav-modal-options input:not([type]), 
+#nav-modal-options input[type=text]:not(.browser-default), 
+#nav-modal-options input[type=password]:not(.browser-default), 
+#nav-modal-options input[type=email]:not(.browser-default), 
+#nav-modal-options input[type=url]:not(.browser-default), 
+#nav-modal-options input[type=time]:not(.browser-default), 
+#nav-modal-options input[type=date]:not(.browser-default), 
+#nav-modal-options input[type=datetime]:not(.browser-default),
+#nav-modal-options input[type=datetime-local]:not(.browser-default), 
+#nav-modal-options input[type=tel]:not(.browser-default), 
+#nav-modal-options input[type=number]:not(.browser-default), 
+#nav-modal-options input[type=search]:not(.browser-default), textarea.materialize-textarea {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: 16px;
+    margin: 0 0 8px 0;
+    padding: 0;
+}
+
 /* END */
+
+
+
 /* DASHBOARD */
 .dashboard-header h5{
     letter-spacing: 1px;
@@ -347,8 +392,9 @@ hr.summary-line.yellow{
 }
 
 .remittance-logo{
+    object-fit: contain;
     width: 100%;
-    height: auto;
+    height: 133px;
 }
 
 /* end */
