--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,548 +1,1 @@
-.full-width{
-    width: 100%;
-}
-
-.hidden{
-    display: none
-}
-.padding-top-0{
-    padding-top: 0 !important;
-}
-.padding-bottom-default{
-    padding-bottom: 0.75rem !important;
-}
-
-.padding-left-0{
-    padding-left: 0 !important;
-}
-.padding-sides-0{
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-}
-
-.padding-all-rem-15{
-    padding: .75rem !important;
-}
-.padding-left-15
-{
-    padding-left: 15px;
-}
-.m-top-15{
-    margin-top: 15px;
-}
-
-.m-tb-15{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-
-.relative{
-    position: relative;
-}
-
-
-.text-normal{
-    text-transform: none;
-}
-.text-capitalize{
-    text-transform: capitalize;
-}
-
-.l-gradient{
-    position: relative;
-}
-
-.l-gradient:before{
-    content:"";
-    position: absolute;
-    left:0;
-    right: 0;
-    height: 130px;
-    background: #000046; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #000046, #1cb5e0); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #000046, #1cb5e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-.banner-image{
-    position: relative;
-    
-}
-.banner-image .banner-image-wrap{
-    padding-top: 62px;
-}
-
-.banner-image::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 150px;
-    background: #000046;
-    background: -webkit-linear-gradient(to right, #000046, #1cb5e0); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #000046, #1cb5e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: url('/stl/public/imgs/bg-1.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.sidenav-overlay{
-    z-index: 9;
-}
-
-.sidebar-scroll .sidenav-close, 
-.sidebar-scroll .sidenav-close:focus,
-.brand-logo .sidenav-close, 
-.brand-logo .sidenav-close:focus{
-    background: none;
-}
-
-
-.main-wrap{
-    padding: .75rem 0;
-}
-
-.overflow-hidden{
-    overflow: hidden;
-}
-
-/* FORMS */
-.form .ërr-msg{
-    color: var(--mcs-red2);
-    font-size: 12px;
-}
-
-  
-.m-select-option .dropdown-content li>span{
-    color: var(--main-text-color);
-}
-.m-select-option .select-dropdown.dropdown-content li.selected {
-    background-color: #b0bed9;
-}
-
-.m-select-option .select-dropdown{
-    width: 100% !important;
-}
-
-
-[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
-    border: 2px solid var(--mc-sidebar-icon-active);
-}
-
-[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:after {
-    background-color: var(--mc-sidebar-icon-active);
-}
-[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
-    border: 2px solid var(--mc-sidebar-icon-active);
-}
-
-
-
-/* end */
-
-
-/* Side Nav */
-.sidenav ul li a.active span.bullet, 
-.sidenav ul li a.active span.bullet-disc {
-    background-color: var(--mc-sidebar-icon-hover);
-}
-
-/* end */
-
-/* NAV PROFILE */
-.dropdown-content.profile a:hover{
-    background-color: transparent;
-}
-
-
-.profile-details{
-    line-height: 23.6px;
-}
-
-.profile-option-links{
-    border-top: 1px solid rgba(255,255,255,0.2);
-}
-
-#nav-modal-options .modal-footer{
-    line-height: 1.5;
-}
-#nav-modal-options .input-field{
-    line-height: 1.5;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-#nav-modal-options input:not([type]), 
-#nav-modal-options input[type=text]:not(.browser-default), 
-#nav-modal-options input[type=password]:not(.browser-default), 
-#nav-modal-options input[type=email]:not(.browser-default), 
-#nav-modal-options input[type=url]:not(.browser-default), 
-#nav-modal-options input[type=time]:not(.browser-default), 
-#nav-modal-options input[type=date]:not(.browser-default), 
-#nav-modal-options input[type=datetime]:not(.browser-default),
-#nav-modal-options input[type=datetime-local]:not(.browser-default), 
-#nav-modal-options input[type=tel]:not(.browser-default), 
-#nav-modal-options input[type=number]:not(.browser-default), 
-#nav-modal-options input[type=search]:not(.browser-default){
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #9e9e9e;
-    border-radius: 0;
-    outline: none;
-    height: 3rem;
-    width: 100%;
-    font-size: 16px;
-    margin: 0 0 8px 0;
-    padding: 0;
-}
-
-/* END */
-
-
-
-/* DASHBOARD */
-.dashboard-header h5{
-    letter-spacing: 1px;
-}
-
-.summary-grid{
-    padding: .80rem !important;
-}
-.doughnut-parent-container{
-    padding-left: 4rem !important;
-    padding-right: 4rem !important;
-}
-.doughnut-title{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.summary-grid span{
-    font-size: 34px;
-}
-
-hr.summary-line.teal{
-    border: 2px solid var(--mcs-teal);
-}
-
-hr.summary-line.red{
-    border: 2px solid var(--mcs-red2);
-}
-
-hr.summary-line.yellow{
-    border: 2px solid var(--mcs-yellow3);
-}
-
-.d-flex .push-height{
-    
-    /* min-height: 100%; */
-    height: 100%;
-}
-
-#chartJSContainer-line-graph{
-    height: 450px;
-}
-#doughnut-chart-anual-sales{
-    margin-top: 15px;
-}
-
-.player-stat{
-    line-height: 40px;
-}
-.player-stat span{
-    display: block;
-    height: 3px;
-    background: var(--mc-sidebar-color);
-}
-
-.player-stat div.bar-wrap{
-    margin-bottom: 13px;
-}
-
-.player-stat div.bar-wrap:nth-child(5) span span{
-    background: var(--msc-navy);
-    /* width: 25%; */
-}
-
-.player-stat div.bar-wrap:nth-child(4) span span{
-    background: var(--mcs-red2);
-    /* width: 30%; */
-}
-
-.player-stat div.bar-wrap:nth-child(3) span span{
-    background: var(--mcs-yellow3);
-    /* width: 90%; */
-}
-
-.player-stat div.bar-wrap:nth-child(2) span span{
-    height: 3px;
-    /* width: 40%; */
-    background: var(--mcs-teal);
-}
-
-.player-stat div.bar-wrap:nth-child(1) span span{
-    background: var(--mc-purple);
-    /* width: 100%; */
-}
-/* END */
-
-/* Location */
-#loc-icon-search{
-    font-size: 1.5rem;
-    top: 1rem;
-}
-
-.input-field .prefix ~ input#search-location{
-    padding-left: 30px;
-    width: calc(100% - 33px);
-    margin-left: 0 !important;
-}
-
-.location .summary-grid{
-    max-height: 724px;
-    overflow-y: auto;
-}
-
-.branch-list .padding-all-15:before{
-    position: absolute;
-    top: 0;
-    width: 0.3rem;
-    border-radius: 4px;
-    height: 100%;
-    left: -1px;
-    content: "";
-}
-.branch-list .padding-all-15:not(:first-child) {
-    margin-top: 20px;
-    
-}
-.branch-list .padding-all-15:nth-child(5n+1):before {
-    background: var(--mc-purple);
-}
-
-
-.branch-list .padding-all-15:nth-child(5n+2):before {
-    background: var(--mc-tangerine);
-}
-
-.branch-list .padding-all-15:nth-child(5n+3):before {
-    background: var(--mc-light-purple);
-}
-.branch-list .padding-all-15:nth-child(5n+4):before {
-    background: var(--mc-light-green);
-}
-.branch-list .padding-all-15:nth-child(5n+5):before {
-    background: var(--mc-pink);
-}
-
-.branch-list .padding-all-15{
-    padding: 4px 15px;
-    overflow: hidden;
-}
-.branch-list .padding-all-15 .loc-name{
-    font-weight: 500;
-}
-.branch-list .padding-all-15 .loc-details{
-    color: var(--mc-sidebar-color);
-}
-
-/* end */
-
-/* Result posting */
-.d-flex.res-posting .input-field:first-child{
-    margin-left: 0;
-}
-
-#modal-res-posting.modal-result-posting{
-    max-height: 306px;
-    max-width: 500px;
-    /* width: 100%;
-    max-height: 200px !important;
-    overflow: auto; */
-}
-
-
-/* end */
-
-
-/* live Stream */
-#iframeYt iframe{
-    width: 100%;
-    min-height: 500px;
-    height: auto;
-}
-
-
-
-/* Game profile */
-
-.modal-game-profile{
-    max-width: 453px;
-    max-height: 285px;
-}
-
-#modal2.modal-game-profile{
-    max-height: 211px;
-}
-
-
-/* Commission Report */
-
-#modal1.commission-report{
-    max-width: 640px;
-    max-height: 463px;   
-}
-/* end */
-
-
-
-/* Remittance Report */
-#modal1.remittance-report{
-     max-width: 495px;
-}
-
-.remittance-logo{
-    object-fit: contain;
-    width: 100%;
-    height: 133px;
-}
-/* end */
-
-/* User Account */
-#modal_operator{
-    max-height: 200px;
-}
-
-
-/* MODAL */
-.s-modal{
-    max-width: 500px;
-}
-
-
-
-/* DATATABLE */
-
-#MyTableCheckAllButton{
-    border: none; background: transparent; font-size: 22px;
-}
-
-
-table.dataTable.stripe tbody>tr.odd.selected, table.dataTable.stripe tbody>tr.odd>.selected, table.dataTable.display tbody>tr.odd.selected, table.dataTable.display tbody>tr.odd>.selected {
-    background-color: #d5ddec;
-}
-
-table.dataTable.display tbody>tr.odd.selected>.sorting_1, table.dataTable.order-column.stripe tbody>tr.even.selected>.sorting_1 {
-    background-color: transparent !important;
-}
-
-
-table.dataTable th.select-checkbox:first-child{
-    padding: 0 !important;
-    margin: 0 auto;
-    text-align: center;
-}
-
-
-
-table.dataTable tr.selected td.select-checkbox:after, 
-table.dataTable tr.selected th.select-checkbox:after {
-    text-shadow: none;
-}
-
-table.dataTable tbody td.select-checkbox:before, 
-table.dataTable tbody td.select-checkbox:after, 
-table.dataTable tbody th.select-checkbox:before, 
-table.dataTable tbody th.select-checkbox:after {
-    
-    margin-left:0;
-    transform: translateX(-50%);
-    width: 18px;
-    height: 18px;
-}
-
-
-
-table.dataTable td, table.dataTable th {
-    border-radius: 0px;
-    position: relative;
-}
-
-th #MyTableCheckAllButton .far{
-    display: none;
-}
-
-td.select-checkbox:before{
-    margin-top:0px !important;
-    
-}
-
-
-
-
-table.dataTable tr.selected td.select-checkbox:after, 
-table.dataTable tr.selected th.select-checkbox:after {
-    margin-top: -3px;
-    margin-left: 0px;
-}
-
-
-/* deffault box */
-th.select-checkbox:before{
-    content: ' ';
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    left: 50%;
-    margin-top: 0px !important;
-    margin-left: -6px;
-    top: 1.2em;
-    border: 1px solid black;
-    border-radius: 3px;
-    background: var(--mc-purple);
-}
-
-/* checked */
-th#selected.select-checkbox:after{
-    content: '\2713';
-    position: absolute;
-    color: white;
-    width: 18px;
-    height: 18px;
-    left: 50%;
-    margin-top: -1px !important;
-    margin-left: -5px;
-    top: 1.2em;
-    border-radius: 3px;
-    
-    
-}
-/* minus */
-th#square-minus.select-checkbox:after{
-    content: '\2014';
-    position: absolute;
-    color: white;
-    width: 18px;
-    height: 18px;
-    left: 50%;
-    margin-top: -3px !important;
-    margin-left: -5px;
-    top: 1.2em;
-    border-radius: 3px;
-    
-}
-
-/* END */
-
-/* Materialze table */
-table .operation{
-    width: 92px;
-}
-
-
-/* Toast */
-#toast-container .alert-success{
-    background: #c8e6c9;
-    color: #1b5e20;
-}
+.full-width{width:100%}.hidden{display:none}.padding-top-0{padding-top:0!important}.padding-bottom-default{padding-bottom:.75rem!important}.padding-left-0{padding-left:0!important}.padding-sides-0{padding-left:0!important;padding-right:0!important}.padding-all-rem-15{padding:.75rem!important}.padding-left-15{padding-left:15px}.m-top-15{margin-top:15px}.m-tb-15{margin-top:15px;margin-bottom:15px}.relative{position:relative}.text-normal{text-transform:none}.text-capitalize{text-transform:capitalize}.l-gradient{position:relative}.l-gradient:before{content:"";position:absolute;left:0;right:0;height:130px;background:#000046;background:-webkit-linear-gradient(to right,#000046,#1cb5e0);background:linear-gradient(to right,#000046,#1cb5e0)}.banner-image{position:relative}.banner-image .banner-image-wrap{padding-top:62px}.banner-image::before{content:"";position:absolute;left:0;right:0;height:150px;background:#000046;background:-webkit-linear-gradient(to right,#000046,#1cb5e0);background:linear-gradient(to right,#000046,#1cb5e0);background:url(/stl/public/imgs/bg-1.svg);background-position:center;background-repeat:no-repeat;background-size:cover}.sidenav-overlay{z-index:9}.brand-logo .sidenav-close,.brand-logo .sidenav-close:focus,.sidebar-scroll .sidenav-close,.sidebar-scroll .sidenav-close:focus{background:0 0}.main-wrap{padding:.75rem 0}.overflow-hidden{overflow:hidden}.form .ërr-msg{color:var(--mcs-red2);font-size:12px}.m-select-option .dropdown-content li>span{color:var(--main-text-color)}.m-select-option .select-dropdown.dropdown-content li.selected{background-color:#b0bed9}.m-select-option .select-dropdown{width:100%!important}[type=radio].with-gap:checked+span:after,[type=radio].with-gap:checked+span:before,[type=radio]:checked+span:after{border:2px solid var(--mc-sidebar-icon-active)}[type=radio].with-gap:checked+span:after,[type=radio]:checked+span:after{background-color:var(--mc-sidebar-icon-active)}[type=radio].with-gap:checked+span:after,[type=radio].with-gap:checked+span:before,[type=radio]:checked+span:after{border:2px solid var(--mc-sidebar-icon-active)}.sidenav ul li a.active span.bullet,.sidenav ul li a.active span.bullet-disc{background-color:var(--mc-sidebar-icon-hover)}.dropdown-content.profile a:hover{background-color:transparent}.profile-details{line-height:23.6px}.profile-option-links{border-top:1px solid rgba(255,255,255,.2)}#nav-modal-options .modal-footer{line-height:1.5}#nav-modal-options .input-field{line-height:1.5;margin-top:1rem;margin-bottom:1rem}#nav-modal-options input:not([type]),#nav-modal-options input[type=date]:not(.browser-default),#nav-modal-options input[type=datetime-local]:not(.browser-default),#nav-modal-options input[type=datetime]:not(.browser-default),#nav-modal-options input[type=email]:not(.browser-default),#nav-modal-options input[type=number]:not(.browser-default),#nav-modal-options input[type=password]:not(.browser-default),#nav-modal-options input[type=search]:not(.browser-default),#nav-modal-options input[type=tel]:not(.browser-default),#nav-modal-options input[type=text]:not(.browser-default),#nav-modal-options input[type=time]:not(.browser-default),#nav-modal-options input[type=url]:not(.browser-default){background-color:transparent;border:none;border-bottom:1px solid #9e9e9e;border-radius:0;outline:0;height:3rem;width:100%;font-size:16px;margin:0 0 8px 0;padding:0}.dashboard-header h5{letter-spacing:1px}.summary-grid{padding:.8rem!important}.doughnut-parent-container{padding-left:4rem!important;padding-right:4rem!important}.doughnut-title{position:absolute;left:50%;transform:translateX(-50%)}.summary-grid span{font-size:34px}hr.summary-line.teal{border:2px solid var(--mcs-teal)}hr.summary-line.red{border:2px solid var(--mcs-red2)}hr.summary-line.yellow{border:2px solid var(--mcs-yellow3)}.d-flex .push-height{height:100%}#chartJSContainer-line-graph{height:450px}#doughnut-chart-anual-sales{margin-top:15px}.player-stat{line-height:40px}.player-stat span{display:block;height:3px;background:var(--mc-sidebar-color)}.player-stat div.bar-wrap{margin-bottom:13px}.player-stat div.bar-wrap:nth-child(5) span span{background:var(--msc-navy)}.player-stat div.bar-wrap:nth-child(4) span span{background:var(--mcs-red2)}.player-stat div.bar-wrap:nth-child(3) span span{background:var(--mcs-yellow3)}.player-stat div.bar-wrap:nth-child(2) span span{height:3px;background:var(--mcs-teal)}.player-stat div.bar-wrap:nth-child(1) span span{background:var(--mc-purple)}#loc-icon-search{font-size:1.5rem;top:1rem}.input-field .prefix~input#search-location{padding-left:30px;width:calc(100% - 33px);margin-left:0!important}.location .summary-grid{max-height:724px;overflow-y:auto}.branch-list .padding-all-15:before{position:absolute;top:0;width:.3rem;border-radius:4px;height:100%;left:-1px;content:""}.branch-list .padding-all-15:not(:first-child){margin-top:20px}.branch-list .padding-all-15:nth-child(5n+1):before{background:var(--mc-purple)}.branch-list .padding-all-15:nth-child(5n+2):before{background:var(--mc-tangerine)}.branch-list .padding-all-15:nth-child(5n+3):before{background:var(--mc-light-purple)}.branch-list .padding-all-15:nth-child(5n+4):before{background:var(--mc-light-green)}.branch-list .padding-all-15:nth-child(5n+5):before{background:var(--mc-pink)}.branch-list .padding-all-15{padding:4px 15px;overflow:hidden}.branch-list .padding-all-15 .loc-name{font-weight:500}.branch-list .padding-all-15 .loc-details{color:var(--mc-sidebar-color)}.d-flex.res-posting .input-field:first-child{margin-left:0}#modal-res-posting.modal-result-posting{max-height:306px;max-width:500px}#iframeYt iframe{width:100%;min-height:500px;height:auto}.modal-game-profile{max-width:453px;max-height:285px}#modal2.modal-game-profile{max-height:211px}#modal1.commission-report{max-width:640px;max-height:463px}#modal1.remittance-report{max-width:495px}.remittance-logo{object-fit:contain;width:100%;height:133px}#modal_operator{max-height:200px}.s-modal{max-width:500px}#MyTableCheckAllButton{border:none;background:0 0;font-size:22px}table.dataTable.display tbody>tr.odd.selected,table.dataTable.display tbody>tr.odd>.selected,table.dataTable.stripe tbody>tr.odd.selected,table.dataTable.stripe tbody>tr.odd>.selected{background-color:#d5ddec}table.dataTable.display tbody>tr.odd.selected>.sorting_1,table.dataTable.order-column.stripe tbody>tr.even.selected>.sorting_1{background-color:transparent!important}table.dataTable th.select-checkbox:first-child{padding:0!important;margin:0 auto;text-align:center}table.dataTable tr.selected td.select-checkbox:after,table.dataTable tr.selected th.select-checkbox:after{text-shadow:none}table.dataTable tbody td.select-checkbox:after,table.dataTable tbody td.select-checkbox:before,table.dataTable tbody th.select-checkbox:after,table.dataTable tbody th.select-checkbox:before{margin-left:0;transform:translateX(-50%);width:18px;height:18px}table.dataTable td,table.dataTable th{border-radius:0;position:relative}th #MyTableCheckAllButton .far{display:none}td.select-checkbox:before{margin-top:0!important}table.dataTable tr.selected td.select-checkbox:after,table.dataTable tr.selected th.select-checkbox:after{margin-top:-3px;margin-left:0}th.select-checkbox:before{content:' ';position:absolute;width:18px;height:18px;left:50%;margin-top:0!important;margin-left:-6px;top:1.2em;border:1px solid #000;border-radius:3px;background:var(--mc-purple)}th#selected.select-checkbox:after{content:'\2713';position:absolute;color:#fff;width:18px;height:18px;left:50%;margin-top:-1px!important;margin-left:-5px;top:1.2em;border-radius:3px}th#square-minus.select-checkbox:after{content:'\2014';position:absolute;color:#fff;width:18px;height:18px;left:50%;margin-top:-3px!important;margin-left:-5px;top:1.2em;border-radius:3px}table .operation{width:92px}#toast-container .alert-success{background:#c8e6c9;color:#1b5e20}
